--- a/Components/Global/Navbar/Style/Navbar.module.scss
+++ b/Components/Global/Navbar/Style/Navbar.module.scss
@@ -77,14 +77,14 @@
       left: 0;
     }
   }
-  .menutoggle {
+  ion-icon {
     position: absolute;
     right: 20px;
     top: 50%;
     width: 30px;
     transform: translate(0, -50%);
     color: white;
-    font-size: 1.6rem;
+    font-size: 4rem;
     opacity: 0;
 
     @include bp.breakpoint(740px) {
