--- a/Style/Home/home.module.scss
+++ b/Style/Home/home.module.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
   overflow: hidden;
   position: relative;
-  margin-top: -4em;
+  margin-top: -6em;
 }
 .container1 {
   height: 108vh;
